# selenium-python-ai-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
selenium_agent/: __init__.py  cli.py
selenium_agent/agents/: __init__.py  coder.py  definitions.py  healer.py  planner.py
selenium_agent/bdd/: __init__.py  gherkin_advisor.py  templates.py
selenium_agent/core/: __init__.py  orchestrator.py
selenium_agent/scanner/: __init__.py  project_scanner.py
selenium_agent/selenium/: __init__.py  base_page.py  driver_factory.py  error_map.py  locator_advisor.py  (+1 more)
specs/: add-a-product-to-cart-and-verify-the-cart-count.json  add-a-product-to-cart-and-verify-the-cart-count.md  checkout-flow-with-logout.json  checkout-flow-with-logout.md  click-sign-in-then-register-your-account-fill-the-registrati.json  click-sign-in-then-register-your-account-fill-the-registrati.md  e2e-checkout-and-logout.json  e2e-checkout-and-logout.md  log-in-to-the-store-as-user-standard-user-with-password-secr.json  log-in-to-the-store-as-user-standard-user-with-password-secr.md  open-the-home-page-click-the-sign-up-link-to-reach-the-creat.json  open-the-home-page-click-the-sign-up-link-to-reach-the-creat.md  open-the-login-demo-page-read-the-username-and-password-disp.json  open-the-login-demo-page-read-the-username-and-password-disp.md  search-for-macbook-and-verify-results-show-prices.json  search-for-macbook-and-verify-results-show-prices.md  test-the-login-page.json  test-the-login-page.md
tests/: test_agent_enhancements.py  test_path_handling.py
(+9 files in other folders)
